--- a/docker/cnil-pia-front/conf/cnil_pia.conf
+++ b/docker/cnil-pia-front/conf/cnil_pia.conf
@@ -1,7 +1,10 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name _;
     root /var/www/pia/dist/pia/;
+
+    ssl_certificate /etc/selfsigned/development.cert;
+    ssl_certificate_key /etc/selfsigned/development.key;
 
     location / {
     }
